# MP-SPDZ

./: CMakeLists.txt  Config.cmake.in  Makefile
Protocols/: ProtocolSet.h
cmake/Modules/: FindMPIR.cmake
